--- a/src/components/popularSities/PopularSities.module.css
+++ b/src/components/popularSities/PopularSities.module.css
@@ -4,23 +4,23 @@
     gap: 20px;
 }
 .title{
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 1.6;
-        color: #fff;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.6;
+    color: #fff;
 }
 
 .list{
     display: flex;
-    gap: 30px;
+    gap: 10px;
 }
 
 .listItem{
     border: 2px solid #fff;
     border-radius: 12px;
-    padding: 8px 8px 0px 8px;
-    width: 144px;
-    height: 180px;
+    padding: 6px 6px 0px 6px;
+    width: 100px;
+    height: 140px;
     box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.02), 5px 6px 7px 0 rgba(0, 0, 0, 0.03), 13px 15px 13px 0 rgba(0, 0, 0, 0.04), 25px 30px 25px 0 rgba(0, 0, 0, 0.04), 41px 50px 47px 0 rgba(0, 0, 0, 0.05), 64px 77px 80px 0 rgba(0, 0, 0, 0.07);
     background: #fff;
     font-family: "Montserrat", sans-serif;
@@ -31,4 +31,32 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.02), 5px 6px 7px 0 rgba(0, 0, 0, 0.03), 13px 15px 13px 0 rgba(0, 0, 0, 0.04), 25px 30px 25px 0 rgba(0, 0, 0, 0.04), 41px 50px 47px 0 rgba(0, 0, 0, 0.05), 64px 77px 80px 0 rgba(0, 0, 0, 0.07);
+    background: rgba(255, 255, 255, 0.8);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1158px) {
+.list{
+    gap: 20px;
+}
+
+.listItem{
+padding: 8px 8px 0px 8px;
+width: 143px;
+height: 180px;
+}
+
+}
+
+@media screen and (min-width: 1158px){
+ .list{
+   gap: 30px;
+ }
+
+ .listItem {
+    padding: 8px 8px 0px 8px;
+    width: 143px;
+        height: 180px;
+ }
+
 }
