--- a/src/components/ourServises/OurServises.module.css
+++ b/src/components/ourServises/OurServises.module.css
@@ -38,5 +38,62 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
+    gap: 20px;
+    
+}
+
+.img{
+    border-radius: 19px 19px 19px 0;
+        width: 380px;
+        height: 260px;
+       
+}
+
+.titleList{
+    font-family: "Avenir Next", sans-serif;
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 1.14286;
+        text-transform: uppercase;
+        text-align: center;
+        color: #434364;
+}
+
+.text{
+    font-family: "Avenir Next", sans-serif;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.03em;
+        text-align: center;
+        color: #434364;
+        width: 320px;
+        height: auto;
+}
+
+.btn{
+    border-radius: 88px;
+        padding: 16px 22px;
+        width: 200px;
+        height: 48px;
+        box-shadow: 0 4px 35px 0 rgba(255, 185, 175, 0.3);
+        background: linear-gradient(152deg, #ffeb80 0%, #fdbfa3 100%);
+        font-family: "Montserrat", sans-serif;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 1.6;
+        text-align: center;
+        color: #6d31d0;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.btn:hover{
+    box-shadow: 0 4px 35px 0 rgba(255, 185, 175, 0.3);
+    background: linear-gradient(90deg, #6d31d0 0%, #ab80ef 100%);
+    color: #ffdb80;
+    border: 2px solid #ffdb80;
 }
