--- a/src/components/ourServises/OurServises.module.css
+++ b/src/components/ourServises/OurServises.module.css
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        align-items: center;
 }
 
 .title{
@@ -17,12 +18,12 @@
     text-align: center;
     color: #fff;
     border-bottom: 4px solid #fdbfa3;
+    width: 380px;
     padding-bottom: 10px;
 }
 
 .list{
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     gap: 30px;
     justify-content: center;
@@ -97,3 +98,23 @@
     color: #ffdb80;
     border: 2px solid #ffdb80;
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1158px){
+.container{
+padding: 60px 94px;
+    width: 768px;
+    height: 1784px;
+}
+
+}
+
+
+ @media screen and (min-width: 1158px){
+.container{
+padding: 80px 110px;
+    width: 1440px;
+    height: 785px;
+}
+
+ }
