--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -6,18 +6,117 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 40px;
 }
 
 .title{
     font-family: "Avenir Next", sans-serif;
-        font-weight: 600;
-        font-size: 40px;
-        line-height: 0.725;
-        color: #434364;
-        border-bottom: 4px solid #fdbfa3;
-        padding-bottom: 24px;
-        width: 400px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 0.725;
+    color: #434364;
+    border-bottom: 4px solid #fdbfa3;
+    padding-bottom: 24px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.list{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.listItem{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+}
+
+.icon{
+    border-radius: 20px;
+    width: 40px;
+    height: 40px;
+    background: linear-gradient(90deg, #6d31d0 0%, #ab80ef 100%);
+    padding: 6px;
+}
+
+.text{
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.6;
+    color: #6d31d0;
+}
+
+.text:hover{
+    color: #ffdb80;
+}
+
+.card{
+    border-radius: 60px;
+    width: 400px;
+    height: 750px;
+    backdrop-filter: blur(500px);
+    background: #ffdb80;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+       
+}
+
+.cardTitle{
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 1.14286;
+    text-transform: uppercase;
+    text-align: center;
+    color: #434364;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    
+
+}
+
+.input{
+    border-radius: 20px;
+    width: 380px;
+    height: 47px;
+    border: none;
+    box-shadow: 0 4px 8px 0 rgba(28, 37, 44, 0.08);
+    background: #fff;
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+    color: #434364;
+    padding-left: 10px;
+    margin-top: 20px;
+}
+.textarea{
+    border-radius: 20px;
+    width: 380px;
+    height: 200px;
+    box-shadow: 0 4px 8px 0 rgba(28, 37, 44, 0.08);
+    background: #fff;
+    margin-top: 30px;
+}
+
+.error{
+    margin-top: 0;
+    color: red;
+    height: 20px;
+}
+
