--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .list{
@@ -61,15 +62,13 @@
 .card{
     border-radius: 60px;
     width: 400px;
-    height: 750px;
+    height: 850px;
     backdrop-filter: blur(500px);
-    background: #ffdb80;
+    background: linear-gradient(152deg, #ffeb80 0%, #fdbfa3 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    gap: 20px;
-       
+    padding: 20px;   
 }
 
 .cardTitle{
@@ -80,13 +79,14 @@
     text-transform: uppercase;
     text-align: center;
     color: #434364;
+    margin-bottom: 20px;
 }
 
 .form{
     display: flex;
     flex-direction: column;
-    
-
+    justify-content: center;
+    align-items: center;
 }
 
 .input{
@@ -105,18 +105,95 @@
     padding-left: 10px;
     margin-top: 20px;
 }
+.input:first-child{
+    margin-top: 0;
+}
 .textarea{
     border-radius: 20px;
     width: 380px;
     height: 200px;
     box-shadow: 0 4px 8px 0 rgba(28, 37, 44, 0.08);
     background: #fff;
-    margin-top: 30px;
+    margin-top: 20px;
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.4;
+    color: #434364;
+    padding-left: 10px;
+    padding-top: 10px;
+    resize: none;
+    border: none;
 }
 
-.error{
-    margin-top: 0;
-    color: red;
+
+.errorContainer {
+    position: relative;
     height: 20px;
+}
+
+.error {
+    position: absolute;
+    bottom: -5px;
+    color: red;
+}
+
+
+
+.label{
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.03em;
+    color: #434364;
+}
+
+.privasy{
+    display: flex;
+    align-items: start;
+    gap: 8px;
+    margin-top: 20px;
+}
+
+
+.checkbox {
+    width: 32px;
+    height: 32px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.checkbox:checked::after {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 14px;
+    border: solid #fff;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-top: -7px;
+    margin-left: -4px;
+}
+
+.btn{
+    border-radius: 30px;
+    padding: 14px 34px;
+    width: 138px;
+    height: 60px;
+    box-shadow: 0 14px 23px 0 rgba(28, 37, 44, 0.08);
+    background: #ffdb80;
+    font-family: "Avenir Next", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    color: #6d31d0;
+    border: none;
+    margin-top: 20px;
 }
 
