--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -10,7 +10,6 @@
 }
 
 .title{
-    font-family: "Avenir Next", sans-serif;
     font-weight: 600;
     font-size: 40px;
     line-height: 0.725;
@@ -21,7 +20,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .list{
@@ -56,18 +54,14 @@
 }
 
 .text:hover{
-    color: #ffdb80;
+    color: #ab80ef;
 }
 
 .card{
     border-radius: 60px;
     width: 400px;
-    height: 850px;
     backdrop-filter: blur(500px);
     background: linear-gradient(152deg, #ffeb80 0%, #fdbfa3 100%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 20px;   
 }
 
@@ -83,10 +77,18 @@
 }
 
 .form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-items: center;
+   padding: 20px;
+}
+
+.error{
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+    display: block;
 }
 
 .input{
@@ -103,7 +105,8 @@
     letter-spacing: 0.03em;
     color: #434364;
     padding-left: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
+    position: relative;
 }
 .input:first-child{
     margin-top: 0;
@@ -115,8 +118,7 @@
     box-shadow: 0 4px 8px 0 rgba(28, 37, 44, 0.08);
     background: #fff;
     margin-top: 20px;
-    font-family: "Avenir Next", sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.4;
     color: #434364;
@@ -126,59 +128,24 @@
     border: none;
 }
 
-
-.errorContainer {
-    position: relative;
-    height: 20px;
-}
-
-.error {
-    position: absolute;
-    bottom: -5px;
-    color: red;
-}
-
-
-
 .label{
     font-family: "Avenir Next", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.03em;
-    color: #434364;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.03em;
+        color: #434364;
 }
 
 .privasy{
     display: flex;
-    align-items: start;
-    gap: 8px;
     margin-top: 20px;
+
+
 }
 
 
-.checkbox {
-    width: 32px;
-    height: 32px;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    margin-right: 10px;
-}
 
-.checkbox:checked::after {
-    content: '';
-    display: block;
-    width: 8px;
-    height: 14px;
-    border: solid #fff;
-    border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
-    position: relative;
-    top: 50%;
-    left: 50%;
-    margin-top: -7px;
-    margin-left: -4px;
-}
 
 .btn{
     border-radius: 30px;
