--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -79,6 +79,7 @@
 .form{
    display: flex;
    flex-direction: column;
+   flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
@@ -139,9 +140,7 @@
 
 .privasy{
     display: flex;
-    margin-top: 20px;
-
-
+    padding-top: 20px;
 }
 
 
@@ -164,3 +163,18 @@
     margin-top: 20px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1158px){
+    .container{
+       width: 768px;
+    }
+
+    .card{
+        width: 600px;
+    }
+
+    
+}
+
+ @media screen and (min-width: 1158px){
+
+ }
